# xray.jit-1

./: .gitignore  CMakeLists.txt  README.md  package-info.json.in
.github/workflows/: main.yml
source/projects/xray.jit.cellvalue/: CMakeLists.txt
source/xray.sift/: CMakeLists.txt
